Bug #27102 Node can crash during flush of undo during restart with filesystem error
Submitted: 13 Mar 2007 20:58 Modified: 23 Mar 2007 11:52
Reporter: Jonas Oreland
Status: Closed
Category:Server: ClusterDD Severity:S3 (Non-critical)
Version:5.1 OS:
Assigned to: Jonas Oreland Target Version:

[13 Mar 2007 20:58] Jonas Oreland
Description:
.

How to repeat:
.

Suggested fix:
.
[13 Mar 2007 21:02] Jonas Oreland
Time: Tuesday 13 Mars 2007 - 12:59:23
Status: Permanent error, external action needed
Message: Invalid parameter for file (Configuration error)
Error: 2812
Error data: LGMAN: File system write failed. OS errno: 4294967295
Error object: LGMAN (Line: 1818) 0x00000002
Program: /space/autotest/libexec/ndbd
Pid: 30403
Trace: ./ndb_4_trace.log.1
Version: Version 5.1.17 (beta)
***EOM***
007-03-13 12:59:20 [MgmSrvr] INFO     -- Node 4: Flushing page cache after undo
completion
2007-03-13 12:59:20 [MgmSrvr] INFO     -- Node 4: Flushing complete
2007-03-13 12:59:21 [MgmSrvr] INFO     -- Node 4: Start phase 4 completed 2007-03-13
12:59:24 [MgmSrvr] ALERT    -- Node 4: Forced node shutdown completed. Occured during
startphase 5. Caused by error 2812: 'Invalid parameter for file(Configuration error).
Permanent error, external action needed'.
[13 Mar 2007 21:03] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/21841

ChangeSet@1.2432, 2007-03-13 21:03:34+01:00, jonas@perch.ndb.mysql.com +1 -0
  ndb - bug#27102
    Make sure head after undo execute does not point to last page of file
    As this will confuse next write to group
[22 Mar 2007 21:23] Mads Martin Joergensen
Fixed in 5.1.17
[23 Mar 2007 11:52] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 5.1.17 changelog.