ndb - bug#27102   Make sure head after undo execute does not point to last page of file   As this will confuse next write to group